# eval-kit

./: .gitignore  README.md  pyproject.toml  setup_premium_packs.py
marketing/: hr_compliance_gumroad.md  real_estate_gumroad.md  sales_enablement_gumroad.md  technical_docs_gumroad.md
rubric_packs/customer_support/: manifest.yaml
rubric_packs/customer_support/rubrics/: empathy_score.yaml  escalation_detection.yaml  resolution_quality.yaml
rubrics/hr_compliance/: accommodation_compliance.yaml  bias_detection.yaml  documentation_standards.yaml  legal_language.yaml  manifest.yaml  policy_adherence.yaml  termination_protocol.yaml
rubrics/hr_compliance/benchmarks/: hr_compliance.jsonl
rubrics/real_estate/: client_communication.yaml  legal_compliance.yaml  listing_accuracy.yaml  manifest.yaml  market_analysis.yaml  neighborhood_detail.yaml  property_description.yaml
rubrics/real_estate/benchmarks/: real_estate.jsonl
rubrics/sales_enablement/: closing_technique.yaml  competitor_positioning.yaml  manifest.yaml  objection_handling.yaml  rapport_building.yaml  urgency_creation.yaml  value_proposition.yaml
rubrics/sales_enablement/benchmarks/: sales_enablement.jsonl
rubrics/technical_docs/: accuracy.yaml  api_reference.yaml  code_examples.yaml  completeness.yaml  manifest.yaml  readability.yaml  versioning.yaml
rubrics/technical_docs/benchmarks/: technical_docs.jsonl
src/eval_kit/: __init__.py  __main__.py  cli.py  models.py  pipeline.py  scoring.py
src/eval_kit/filters/: __init__.py  base.py  polish.py  surface.py  (+2 more)
tests/: test_rubric_packs.py  test_smoke.py
(+7 files in other folders)
